essai-padding-validateur-css

--- a/style.css
+++ b/style.css
@@ -873,9 +873,7 @@ h4 {
         position: relative;
     }
     .bloc {
-        padding:
-        env (safe-area-inset-left)
-        (safe-area-inset-right);
+        padding: auto;
     }
     .bloc-group,
     .bloc-group .bloc {
@@ -885,9 +883,6 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding: 
-        env (safe-area-inset-left)
-        (safe-area-inset-right);
     }
 }
 
