--- a/style.css
+++ b/style.css
@@ -873,7 +873,7 @@ h4 {
         position: relative;
     }
     .bloc {
-        padding: auto;
+        padding: inherit;
     }
     .bloc-group,
     .bloc-group .bloc {
