--- a/style.css
+++ b/style.css
@@ -6,7 +6,15 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
+.annuaire2 li { 
+    padding: 20px;
+}
+.annuaire1 li { 
+    padding: 20px;
+}
+.partenaires li { 
+    padding: 20px;
+}
 a,
 button {
     transition: all .3s ease-in-out;
@@ -651,7 +659,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #FFFFFF!important;
 }
 
 .container {
