--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ body {
     color: #FFFFFF !important;
 }
 
+#projet { 
+    color: #eeae91 !important;
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
