--- a/style.css
+++ b/style.css
@@ -33,11 +33,10 @@ body {
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none!important;
 }
 
 a:hover {
-    text-decoration: none;
+    text-decoration: underline;
     cursor: pointer;
 }
 
@@ -891,13 +890,8 @@ h4 {
         background-attachment: scroll;
     }
     .page-container,
-    #hero-bloc {
-        overflow-x: hidden;
-        position: relative;
-    }
-    .bloc {
-        padding: inherit;
-    }
+   
+   
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -910,10 +904,7 @@ h4 {
 }
 
 @media (max-width: 767px) {
-    .page-container {
-        overflow-x: hidden;
-        position: relative;
-    }
+    
     h1,
     h2,
     h3,
@@ -971,10 +962,7 @@ h4 {
     .hero {
         padding: 50px 0;
     }
-    .hero-nav {
-        left: -1px;
-        right: -1px;
-    }
+   
     .navbar-collapse {
         padding: 0;
         overflow-x: hidden;
@@ -983,7 +971,7 @@ h4 {
     }
     .navbar-brand img {
         max-height: 40px;
-        width: auto;
+        max-width: 212px;
     }
     .nav-invert .navbar-header {
         float: none;
@@ -1001,11 +989,6 @@ h4 {
     .bloc-xl,
     .bloc-lg {
         padding: 40px 0;
-    }
-    .bloc-sm,
-    .bloc-md {
-        padding-left: 0;
-        padding-right: 0;
     }
     .bloc-tile-2 .container,
     .bloc-tile-3 .container,
