--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+#quote { 
+    color: black;
+    font-size: 20px !important;
+}
+#cite { 
+    color: black !important;
+}
 .annuaire2 li { 
     padding: 20px;
     
