--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4373,7 +4373,7 @@ tbody.collapse.in {
     cursor: not-allowed;
     background-color: transparent;
     background-image: none;
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
+    
 }
 
 .open>.dropdown-menu {
@@ -5154,7 +5154,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
     border-width: 0 0 1px
 }
 
-@media (min-width:768px) {
+@media (max-device-width:768px) {
     .navbar-static-top {
         border-radius: 0
     }
