--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5154,7 +5154,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
     border-width: 0 0 1px
 }
 
-@media (max-device-width:768px) {
+@media (max-width:768px) {
     .navbar-static-top {
         border-radius: 0
     }
